crates/lang/macro/tests/ui/contract/fail/constructor-payable.stderr
error: encountered conflicting ink! attribute argument
 --> $DIR/constructor-payable.rs:9:28
  |
9 |         #[ink(constructor, payable)]
  |                            ^^^^^^^

error: constructors are implicitly payable
 --> $DIR/constructor-payable.rs:9:28
  |
9 |         #[ink(constructor, payable)]
  |                            ^^^^^^^
